--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,58 @@
 :root {
-    --primary: #1890ff;
+    --primary: rgb(24, 144, 255);
+    --primary-light: rgb(64, 162, 254);
+    --primary-dark: rgb(21, 122, 218) ;
+}
+
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    padding: 0;
+    margin: 0;
+    font-family: 'Roboto', 'Zen Kaku Gothic New', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin-top: 0
+}
+
+.flex {
+    display: flex;
+}
+.flex-col {
+    flex-direction: column;
+}
+.justify-center {
+    justify-content: center;
+}
+.justify-between {
+    justify-content: space-between;
+}
+.justify-around {
+    justify-content: space-around;
+}
+.justify-start {
+    justify-content: flex-start;
+}
+.justify-end {
+    justify-content: flex-end;
+}
+.items-center   {
+    align-items: center;
+}
+.items-start {
+    align-items: flex-start;
+}
+.items-end {
+    align-items: flex-end;
+}
+
+.w-full {
+    width: 100%;
+}
+.h-full {
+    height: 100%;
 }
