--- a/src/components/Population/Prefectures/style.css
+++ b/src/components/Population/Prefectures/style.css
@@ -7,7 +7,7 @@
     gap: 0.75rem;
     flex-wrap: wrap;
     /* justify-content: center; */
-    align-items: center;
+    /* align-items: center; */
     margin: 1rem 0 0 0;
     padding: 0;
     list-style: none;
