:recycle: load data from localStorage

--- a/src/pages/population/style.css
+++ b/src/pages/population/style.css
@@ -1,9 +1,6 @@
 .container {
     width: 100vw;
-    padding-inline: 3rem;
-}
-.prefecture-list-wrapper {
-    /* flex: auto; */
+    padding: 2rem 3rem;
 }
 
 .chart-wrapper {
