--- a/src/components/common/Button/style.css
+++ b/src/components/common/Button/style.css
@@ -1,4 +1,4 @@
-.custom-button {
+.__button {
     appearance: button;
     background-color: var(--primary);
     border: 1px solid var(--primary);
@@ -16,31 +16,31 @@
     position: relative;
     text-align: center;
     text-transform: none;
-    transition: all 80ms ease-in-out;
+    transition: all 100ms ease-in-out;
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
     width: fit-content;
 }
 
-.custom-button:disabled {
+.__button:disabled {
     opacity: 0.5;
 }
 
-.custom-button:focus {
+.__button:focus {
     outline: 0;
 }
 
-.custom-button:hover {
+.__button:hover {
     background-color: var(--primary-light);
     border-color: var(--primary-light);
 }
 
-.custom-button:active {
+.__button:active {
     background-color: var(--primary-dark);
     border-color: var(--primary-dark);
 }
 
-.custom-button:focus {
+.__button:focus {
     box-shadow: 0 0 0 4px rgba(24,144,255,0.2);
 }
