--- a/src/components/common/Switch/style.css
+++ b/src/components/common/Switch/style.css
@@ -13,10 +13,10 @@
     display: flex;
     cursor: pointer;
     width: 50px;
-    height: 25px;
+    height: 24px;
     border-radius: 9999px;
     background-color: #666;
-    transition: all 0.3s ease-in-out;
+    transition: all ease .3s;
 }
 
 .switch-wrapper .switch-slider::before {
@@ -24,9 +24,9 @@
     position: absolute;
     top: 2px;
     left: 2px;
-    width: 21px;;
-    height: 21px;
-    border-radius: 21px;
+    width: 20px;;
+    height: 20px;
+    border-radius: 20px;
     transition: all ease 0.3s;
     background: white;
     box-shadow: 0px 2px 4px 0px rgb(0 35 11 0.2);
@@ -42,7 +42,7 @@
 }
 
 .switch-wrapper .switch-slider:active::before {
-    width: 28px;
+    width: 24px;
 }
 
 .switch-wrapper .switch-value:focus + .switch-slider {
@@ -51,4 +51,34 @@
 
 .switch-wrapper .switch-value:focus:checked + .switch-slider {
     box-shadow: 0 0 0 3px rgba(24,144,255,0.2);
+}
+
+@media (max-width: 1179px) {
+    .switch-wrapper .switch-slider {
+        width: 40px;
+        height: 20px;
+    }
+    .switch-wrapper .switch-slider::before {
+        width: 16px;
+        height: 16px;
+        border-radius: 16px;
+    }
+    .switch-wrapper .switch-slider:active::before {
+        width: 18px;
+    }
+}
+
+@media (max-width: 400px) {
+    .switch-wrapper .switch-slider {
+        width: 36px;
+        height: 18px;
+    }
+    .switch-wrapper .switch-slider::before {
+        width: 14px;
+        height: 14px;
+        border-radius: 14px;
+    }
+    .switch-wrapper .switch-slider:active::before {
+        width: 16px;
+    }
 }
