--- a/src/pages/population/style.css
+++ b/src/pages/population/style.css
@@ -1,14 +1,98 @@
-.container {
+.population__container {
     width: 100vw;
-    padding: 2rem 3rem;
+    padding: 2rem;
+    padding-top: 100px;
 }
 
-.chart-wrapper {
+.population__chart-wrapper {
     flex: auto;
     max-width: calc(100vw - 4*8rem + 3*0.75rem )
+}
+
+.population__content {
+    display: flex;
+    flex-direction: row;
 }
 
 .buttons-wrapper {
     margin-top: 2rem;
     gap: 1rem;
+}
+
+.population__navbar {
+    width: 100vw;
+    display: flex;
+    background: white;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    padding: 2rem;
+}
+
+.population__navbar__title h2 {
+    margin-bottom: 0;
+}
+
+.population__navbar__toggle-show-pref-list .menu-icon {
+    height: 30px;
+    aspect-ratio: 1 / 1;
+    cursor: pointer;
+    display: none;
+    user-select: none;
+}
+
+@media (max-width: 1179px) {
+    .population__content {
+        flex-direction: column;
+        gap: 20px;
+    }
+    .population__chart-wrapper {
+        /* width: calc(100vw - 4*8rem + 3*0.75rem); */
+        max-width: 100vw;
+        height: 45rem;
+        /* margin-top: 4px; */
+    }
+    .population__navbar {
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        padding: 0.75rem;
+    }
+
+    
+    .population__navbar__title {
+        font-size: 0.8rem;
+    }
+
+    .population__navbar__toggle-show-pref-list .menu-icon {
+        display: block;
+    }
+
+    .population__prefecture-list-wrapper {
+        position: fixed;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        top: -150%;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        overflow: scroll;
+        background: white;
+        z-index: 888;
+        transition: all ease .6s;
+        padding-top: 4.5rem;
+        padding-bottom: 2rem;
+    }
+    .population__prefecture-list-wrapper.mobile-active {
+        top: 0px;
+    }
+
+}
+
+@media (max-width: 399px) {
+    .population__navbar__title {
+        font-size: 0.6rem;
+    }
 }
