--- a/src/components/Population/PrefectureList/style.css
+++ b/src/components/Population/PrefectureList/style.css
@@ -1,7 +1,6 @@
 
 .prefecture-list__list {
     display: flex;
-    /* flex-direction: column; */
     width: calc(3 * 8.25rem + 2 * 0.75rem);
     height: 28rem;
     gap: 0.5rem;
@@ -33,6 +32,7 @@
         margin-inline: auto;
         width: 80%;
         height: auto;
+        max-height: calc(100vh - 250px);
         margin-block: 0; 
         justify-content: space-around;
     }
@@ -48,9 +48,6 @@
 }
 
 @media (max-width: 400px) {
-    .prefecture-list__list {
-    
-    }
     .prefecture-list__list .prefecture-list__item {
         font-size: 0.8rem;
     }
