--- a/src/pages/population/style.css
+++ b/src/pages/population/style.css
@@ -4,6 +4,21 @@
     padding-top: 100px;
 }
 
+.population__loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    background-color: #333;
+    color: white;
+    font-size: 1.6rem;
+}
+
 .population__chart-wrapper {
     flex: auto;
     max-width: calc(100vw - 4*8rem + 3*0.75rem )
@@ -28,7 +43,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 999;
+    z-index: 888;
     padding: 2rem;
 }
 
@@ -50,10 +65,7 @@
         gap: 20px;
     }
     .population__chart-wrapper {
-        /* width: calc(100vw - 4*8rem + 3*0.75rem); */
         max-width: 100vw;
-        height: 45rem;
-        /* margin-top: 4px; */
     }
     .population__navbar {
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -74,13 +86,13 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        top: -150%;
+        top: -125%;
         left: 0;
         width: 100vw;
         height: 100vh;
-        overflow: scroll;
         background: white;
-        z-index: 888;
+        z-index: 777;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
         transition: all ease .6s;
         padding-top: 4.5rem;
         padding-bottom: 2rem;
