--- a/src/components/Population/PrefectureList/style.css
+++ b/src/components/Population/PrefectureList/style.css
@@ -1,4 +1,3 @@
-
 .prefecture-list__list {
     display: flex;
     width: calc(3 * 8.25rem + 2 * 0.75rem);
@@ -6,7 +5,7 @@
     gap: 0.5rem;
     flex-wrap: wrap;
     margin: 1rem 0 0 0;
-    padding: .5rem 0;
+    padding: 0.5rem 0;
     list-style: none;
     margin-block: auto;
     overflow-y: scroll;
@@ -25,7 +24,6 @@
     width: 100% !important;
 }
 
-
 @media (max-width: 1179px) {
     .prefecture-list__list {
         flex-direction: row;
@@ -33,7 +31,7 @@
         width: 80%;
         height: auto;
         max-height: calc(100vh - 250px);
-        margin-block: 0; 
+        margin-block: 0;
         justify-content: space-around;
     }
 
