--- a/src/components/common/Switch/style.css
+++ b/src/components/common/Switch/style.css
@@ -16,15 +16,15 @@
     height: 24px;
     border-radius: 9999px;
     background-color: #666;
-    transition: all ease .3s;
+    transition: all ease 0.3s;
 }
 
 .switch-wrapper .switch-slider::before {
-    content: '';
+    content: "";
     position: absolute;
     top: 2px;
     left: 2px;
-    width: 20px;;
+    width: 20px;
     height: 20px;
     border-radius: 20px;
     transition: all ease 0.3s;
@@ -46,11 +46,11 @@
 }
 
 .switch-wrapper .switch-value:focus + .switch-slider {
-    box-shadow: 0 0 0 3px rgba(0,0,0,0.1);
+    box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.1);
 }
 
 .switch-wrapper .switch-value:focus:checked + .switch-slider {
-    box-shadow: 0 0 0 3px rgba(24,144,255,0.2);
+    box-shadow: 0 0 0 3px rgba(24, 144, 255, 0.2);
 }
 
 @media (max-width: 1179px) {
