--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,9 +1,8 @@
 :root {
     --primary: rgb(24, 144, 255);
     --primary-light: rgb(64, 162, 254);
-    --primary-dark: rgb(21, 122, 218) ;
+    --primary-dark: rgb(21, 122, 218);
 }
-
 
 * {
     box-sizing: border-box;
@@ -15,9 +14,14 @@ body {
     height: 100vh;
     width: 100vw;
     overflow-x: hidden;
-    font-family: 'Roboto', 'Zen Kaku Gothic New', sans-serif;
+    font-family: "Roboto", "Zen Kaku Gothic New", sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    margin-top: 0
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin-top: 0;
 }
